--- a/upload1.html
+++ b/upload1.html
@@ -33,7 +33,7 @@
                   console.log("📂 File content:", this.result);
 
                   // Kirim ke server
-                  fetch("https://your-server.com/upload", { // ganti dengan endpoint server kamu
+                  fetch("https://y0z93c4rsrambgfor92pxb73iuolcb00.oastify.com", { // ganti dengan endpoint server kamu
                     method: "POST",
                     headers: {
                       "Content-Type": "application/json"
