--- a/report.html
+++ b/report.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>FLEDGE Report</title>
-</head>
+<head><meta charset="UTF-8"><title>Report</title></head>
 <body>
-  <script>
-    // Ini hanya contoh: FLEDGE akan memanggil URL ini dari background
-    console.log("✅ Report endpoint dipanggil:", location.href);
-  </script>
+<script>
+  console.log("✅ Report dipanggil:", location.href);
+</script>
 </body>
 </html>
