--- a/redirect.html
+++ b/redirect.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Mengalihkan Halaman</title>
-    <meta http-equiv="refresh" content="0; url=https://lanaya113505.github.io/pizza/POC.html">
+    <meta http-equiv="refresh" content="0; url=https://lanaya113505.github.io/pizza/script.html">
 </head>
 <body>
     <p>Anda akan dialihkan ke halaman POC...</p>
